--- a/compose.yml
+++ b/compose.yml
@@ -1,45 +1,25 @@
-version: "3.9"
+version: '3.8'
 
 services:
   django:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
+    container_name: django_app
+    command: daphne -b 0.0.0.0 -p 8000 realtime_code_editor.asgi:application
     volumes:
       - .:/app
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+      
     depends_on:
       - redis
-    command: >
-      bash -c "python manage.py migrate &&
-               daphne -b 0.0.0.0 -p 8000 realtime_code_editor.asgi:application"
-
-
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - DOCKER_HOST=unix:///var/run/docker.sock
   redis:
     image: redis:latest
-    container_name: redis
+    container_name: redis_server
     ports:
       - "6379:6379"
-
-  celery:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    depends_on:
-      - redis
-    command: celery -A realtime_code_editor worker --loglevel=info
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - django
-
-volumes:
-  redis-data:
+    command: redis-server
