--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,8 @@
-version: '3.8'
-
 services:
   django:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: django_app
     command: daphne -b 0.0.0.0 -p 8000 realtime_code_editor.asgi:application
     volumes:
@@ -10,7 +10,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8000:8000"
-      
     depends_on:
       - redis
       - celery
@@ -18,14 +17,17 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DOCKER_HOST=unix:///var/run/docker.sock
+
   redis:
     image: redis:latest
     container_name: redis_server
     ports:
       - "6379:6379"
-    command: redis-server
+
   celery:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: celery_worker
     command: celery -A realtime_code_editor worker --loglevel=info
     volumes:
@@ -37,3 +39,21 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - DOCKER_HOST=unix:///var/run/docker.sock
+
+  python_env:
+    image: python:3.10-slim
+    container_name: python_global_container
+    stdin_open: true
+    tty: true
+    volumes:
+      - .:/app
+    command: python
+  
+  ubuntu_env:
+    build:
+      context: .
+      dockerfile: Dockerfile.ubuntu
+    volumes:
+      - ./code:/code_file  # Mounts the local 'code' directory to '/app' in the container
+    working_dir: /code_file
+    tty: true  # Keeps the container running interactively
