--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,22 +1,21 @@
-# Dockerfile
-FROM ubuntu:latest
+FROM ubuntu:22.04
 
-# Set environment variables to reduce interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Update the package list and install Python, GCC, and build tools
-RUN apt-get update && apt-get install -y \
-    python3 \
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3-minimal \
     python3-pip \
-    build-essential \
     gcc \
-    && apt-get clean
+    build-essential \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Verify installations
 RUN python3 --version && gcc --version
 
-# Set the working directory
 WORKDIR /code_file
 
-# Default entry point
+COPY python_packages.txt /package/python_packages.txt
+
+
+RUN python3 -m pip install --no-cache-dir -r /package/python_packages.txt
+
 CMD ["bash"]
