--- a/render.yml
+++ b/render.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - .:/app
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./static:/app/static
+      - ./staticfiles:/app/staticfiles
     ports:
       - "8000:8000"
     depends_on:
@@ -41,14 +41,14 @@ services:
       - REDIS_PORT=6379
       - DOCKER_HOST=unix:///var/run/docker.sock
 
-  python_env:
-    image: python:3.10-slim
-    container_name: python_global_container
-    stdin_open: true
-    tty: true
-    volumes:
-      - .:/app
-    command: python
+  # python_env:
+  #   image: python:3.10-slim
+  #   container_name: python_global_container
+  #   stdin_open: true
+  #   tty: true
+  #   volumes:
+  #     - .:/app
+  #   command: python
   
   ubuntu_env:
     build:
