--- a/render.yaml
+++ b/render.yaml
@@ -1,60 +1,47 @@
 services:
-  django:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: django_app
-    command: daphne -b 0.0.0.0 -p 8000 realtime_code_editor.asgi:application
-    volumes:
-      - .:/app
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./staticfiles:/app/staticfiles
-    ports:
-      - "8000:8000"
-    depends_on:
-      - redis
-      - celery
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - DOCKER_HOST=unix:///var/run/docker.sock
+  - name: django
+    type: web
+    env: docker
+    repo: https://github.com/faysalhassantorjo/RCE.git
+    region: oregon
+    plan: free
+    autoDeploy: true
+    dockerfilePath: Dockerfile
+    envVars:
+      - key: REDIS_HOST
+        value: redis
+      - key: REDIS_PORT
+        value: "6379"
+      - key: DOCKER_HOST
+        value: unix:///var/run/docker.sock
+    healthCheckPath: /
 
-  redis:
-    image: redis:latest
-    container_name: redis_server
-    ports:
-      - "6379:6379"
+  - name: redis
+    type: redis
+    plan: free
+    region: oregon
 
-  celery:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_worker
-    command: celery -A realtime_code_editor worker --loglevel=info
-    volumes:
-      - .:/app
-      - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - redis
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - DOCKER_HOST=unix:///var/run/docker.sock
+  - name: celery
+    type: worker
+    env: docker
+    repo: https://github.com/faysalhassantorjo/RCE.git
+    region: oregon
+    plan: free
+    autoDeploy: true
+    dockerfilePath: Dockerfile
+    envVars:
+      - key: REDIS_HOST
+        value: redis
+      - key: REDIS_PORT
+        value: "6379"
+      - key: DOCKER_HOST
+        value: unix:///var/run/docker.sock
 
-  # python_env:
-  #   image: python:3.10-slim
-  #   container_name: python_global_container
-  #   stdin_open: true
-  #   tty: true
-  #   volumes:
-  #     - .:/app
-  #   command: python
-  
-  ubuntu_env:
-    build:
-      context: .
-      dockerfile: Dockerfile.ubuntu
-    volumes:
-      - ./code:/code_file  
-    working_dir: /code_file
-    tty: true  
+  - name: ubuntu-env
+    type: worker
+    env: docker
+    repo: https://github.com/faysalhassantorjo/RCE.git
+    region: oregon
+    plan: free
+    autoDeploy: true
+    dockerfilePath: Dockerfile.ubuntu
