--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,21 +1,19 @@
-FROM ubuntu:22.04
+FROM python:3.10-slim
 
-ENV DEBIAN_FRONTEND=noninteractive
+WORKDIR /code_file
 
+# Install required system packages
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3-minimal \
-    python3-pip \
     gcc \
     build-essential \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Check versions
 RUN python3 --version && gcc --version
 
-WORKDIR /code_file
-
+# Copy and install Python dependencies
 COPY python_packages.txt /package/python_packages.txt
-
-
 RUN python3 -m pip install --no-cache-dir -r /package/python_packages.txt
 
 CMD ["bash"]
+
