--- a/compose.yml
+++ b/compose.yml
@@ -13,7 +13,7 @@ services:
       - "8000:8000"
     depends_on:
       - redis
-      - celery
+      # - celery
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -25,21 +25,21 @@ services:
     ports:
       - "6379:6379"
 
-  celery:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: celery_worker
-    command: celery -A realtime_code_editor worker --loglevel=info
-    volumes:
-      - .:/app
-      - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - redis
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - DOCKER_HOST=unix:///var/run/docker.sock
+  # celery:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: celery_worker
+  #   command: celery -A realtime_code_editor worker --loglevel=info
+  #   volumes:
+  #     - .:/app
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #   depends_on:
+  #     - redis
+  #   environment:
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - DOCKER_HOST=unix:///var/run/docker.sock
 
   # python_env:
   #   image: python:3.10-slim
